# nyx

./: .gitattributes  .gitignore  .woodpecker.yml  README.md  apply-latitude-7390-server.sh  apply-latitude-7390.sh  apply-mb-wooga.sh  apply-mbp-m4.sh  apply-system.sh  apply-work-station.sh  fixes  flake.nix  makefile  result  temp.home.nix  xmonad.nix  xsession.nix
.forgejo/workflows/: nixos-rebuild-latitude-7390-server.yml
alacritty/: alacritty.nix
darwin/: apply.sh  configuration.nix  flake.nix  home.nix  homebrew.nix
darwin/common/: emacs.nix
darwin/mb-wooga/: configuration.nix  home.nix  homebrew.nix
darwin/mbp-m4/: configuration.nix  home.nix
dev-tools/: git.nix
dev-tools/haskell/: pkgs.nix
dev-tools/nvim/: config.vim  nvim.nix
dev-tools/vscodium/: config.nix  vscodium.nix
linux/polybar/: hm.nix
pkgs/: alacritty.nix  dunst.nix  fish.nix  fonts.nix  git.nix  polybar.nix  tmux.nix  vim.nix  vimrc  vscode.nix  zed.nix
pkgs/blockchain/: solana.nix
pkgs/discord/: discord.nix  linux.nix
pkgs/languages/: clojure.nix  elixir.nix  golang.nix  haskell.nix  node.nix  rust.nix
pkgs/logseq/: logseq.nix  update.sh
pkgs/nixpkgs/: default.nix  kubectl-iexec.nix  rodney.nix  when.nix
pkgs/polybar/: config.nix
priv/: gzp-stuff.nix  gzp-vpn-configuration.nix  hrone.token.nix  priv.nix
sops/: .sops.yaml
system/: builds.module.nix  builds.nix  common.nix  configuration.nix  hardware-configuration.nix
taffybar-phv/: .gitignore  Main.hs  default.nix  taffybar-phv.cabal
xmonad-phv/: CHANGELOG.md  Main.hs  default.nix  xmonad-phv.cabal  xmonad.nix
(+56 files in other folders)
