cabal-version:      3.0
name:               taffybar-phv
version:            0.1.0.0
license:            BSD-3-Clause
author:             phv
maintainer:         phv
extra-source-files: CHANGELOG.md

executable taffybar
  main-is:          Main.hs
  build-depends:
    , base
    , taffybar
    , xmonad
    , xmonad-contrib
    , xmobar
    , containers
    , text
    , time
    , dbus
    , gi-gtk
    , hslogger
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
